@@ -1,6 +1,7 @@
 0.9.54
 - Change position of studio/country etc tags to allow smart auto sizing
 - Add click/tap to close video OSD
+- Add button for lyrics
 
 0.9.53
 - Options to disable/enable language/country/codec tags
